--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# for now
+# for now 
+# PRODUCTION
 static/
+
+# personal todo items
+todo.txt
