--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2.11
 gunicorn
-psycopg2-binary==2.9.5
+psycopg2
+psycopg2-binary
 python-dotenv==1.0.0
 SQLAlchemy==2.0.25
 stripe==9.9.0
